fix:changed adress link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <div class="row">
                 <a class="contacts-link" href="https://github.com/tatsiana-prog">Tatsiana-prog</a>
                 <div class="box">© 2023</div>
-                <a class="logo-rss" href="https://rs.school/js/"></a>
+                <a class="logo-rss" href="https://rs.school/js/">
+                   <img class="image" src="./assets/img/rss.svg" alt="logo-school">
+                </a>
             </div>
         </div>
     </footer>
